2000-10-15  Pete Wyckoff  <pw@osc.edu>

	* Rules: Define _LIBC during generation of bits/stdio_lim.d.

2000-10-15  Pete Wyckoff  <pw@osc.edu>

	* iconvdata/tst-tables.sh: Invoke other shell scripts through ${SHELL}.
	* iconvdata/tst-table.sh: Likewise.

2000-10-15  Ulrich Drepper  <drepper@redhat.com>

	* elf/dl-error.c (_dl_signal_error): Allocate memory for objname
	as well.  Reported by Alexander V. Lukyanov <lav@yars.free.net>.

	* iconvdata/gconv-modules: Add aliases for Winblowz charsets.
	Patch by Joseph S. Myers <jsm28@cam.ac.uk>.

2000-10-13  Andreas Schwab  <schwab@suse.de>

	* elf/elf.h (R_IA64_PCREL60B): Add relocation.

2000-10-15  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/hppa/brk.c: Cleanups.
	* sysdeps/unix/sysv/linux/hppa/umount.c: Likewise.
	* sysdeps/unix/sysv/linux/hppa/bits/sigaction.h: Likewise.
	* sysdeps/unix/sysv/linux/hppa/bits/signum.h: Likewise.
	* sysdeps/unix/sysv/linux/hppa/sys/ucontext.h: Likewise.

2000-10-14  Ulrich Drepper  <drepper@redhat.com>

	* math/libm-test.inc (frexp_test): Add L suffix also to parameters.
	(hypot_test): Likewise.

	* sysdeps/generic/printf_fphex.c: Compute width of decimal point
	string correctly.  Handle padding correctly.

	* sysdeps/ia64/fpu/printf_fphex.c: Use sizeof in _itowa parameters
	correctly.
	* sysdeps/ieee754/ldbl-128/printf_fphex.c: Likewise.
	* sysdeps/ieee754/ldbl-96/printf_fphex.c: Likewise.

2000-10-12  Alan Modra  <alan@linuxcare.com.au>

	* FAQ.in: Add --start-group and --end-group.

2000-10-12  Alan Modra  <alan@linuxcare.com.au>

	* malloc/memusage.c: Conditionalize stack usage calculation on
	stack direction.

2000-10-12  Alan Modra  <alan@linuxcare.com.au>

	* config.h.in: Add ASM_LINE_SEP.
	* configure.in: Add test for comment and line separators.
	* include/libc-symbols.h: Define and use ASM_LINE_SEP, and add tabs to
	placate some hppa assemblers.
	* sysdeps/hppa/sysdep.h: Likewise.
	* sysdeps/gnu/siglist.c: Insert \n and \t into inline asm.